--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,16 @@ networks:
   laravel:
 
 services:
-  site:
+  nginx:
     build:
       context: .
       dockerfile: nginx.dockerfile
     container_name: nginx
     ports:
-      - 80:80
+      - 8080:80
     volumes:
       - ./src:/var/www/html:delegated
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
       - redis
@@ -28,6 +29,8 @@ services:
     tty: true
     ports:
       - 3306:3306
+    volumes:
+      - ./mysql:/var/lib/mysql
     environment:
       MYSQL_DATABASE: homestead
       MYSQL_USER: homestead
@@ -49,7 +52,7 @@ services:
       - laravel
 
   redis:
-    image: redis:alpine
+    image: redis:6.2.3-alpine
     container_name: redis
     restart: unless-stopped
     ports:
@@ -73,7 +76,7 @@ services:
       - laravel
 
   npm:
-    image: node:13.7
+    image: node:16-alpine3.12
     container_name: npm
     volumes:
       - ./src:/var/www/html
@@ -98,7 +101,7 @@ services:
       - laravel
 
   mailhog:
-    image: mailhog/mailhog:latest
+    image: mailhog/mailhog:v1.0.1
     container_name: mailhog
     ports:
       - 1025:1025
